<?xml version="1.0"?>
<package format="2">
  <name>tjark_agv_slam</name>
  <version>0.0.1</version>
  <description>SLAM experiments for tjark_agv robot (ORB-SLAM2, gmapping, RTAB-Map)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

  <!-- Robot description -->
  <depend>tjark_agv</depend>
  <depend>xacro</depend>

  <!-- Gazebo -->
  <depend>gazebo_ros</depend>

  <!-- SLAM packages (run dependency only) -->
  <exec_depend>gmapping</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
</package>
